--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.7.5",
+    "@types/node": "^13.1.6",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "git-commit-msg-linter": "^5.0.8",
     "typescript": "^5.6.3"
   }
