--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/node": "^13.1.6",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "eslint": "^6.8.0",
@@ -20,7 +21,9 @@
     "eslint-plugin-standard": "^4.1.0",
     "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.1.6",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
 }
