--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "eslint": "^9.12.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -30,5 +31,8 @@
     "lint-staged": "^15.2.10",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "validator": "^13.12.0"
   }
 }
