--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "@shelf/jest-mongodb": "^4.3.2",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.13",
-    "@types/mongodb": "^4.0.6",
     "@types/node": "^22.7.5",
     "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "eslint": "^9.12.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-config-love": "^87.0.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^7.1.0",
     "git-commit-msg-linter": "^5.0.8",
-    "husky": "^8.0.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "ts-jest": "^29.2.5",
