--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.3.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
     "@types/validator": "^13.12.2",
@@ -31,11 +33,13 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "sucrase": "^3.35.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "express": "^4.21.1",
     "mongodb": "^6.9.0",
     "validator": "^13.12.0"
   }
