--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
+    "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "eslint": "^9.12.0",
@@ -34,6 +35,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "sucrase": "^3.35.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
