--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.2",
@@ -43,6 +44,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "fast-glob": "^3.3.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "validator": "^13.12.0"
   }
