--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.0",
   "main": "index.js",
   "scripts": {
-    "start": "sucrase-node src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "build": "rimraf dist && tsc",
+    "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -35,6 +37,7 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "rimraf": "^6.0.1",
     "sucrase": "^3.35.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
@@ -43,7 +46,6 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
-    "fast-glob": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "validator": "^13.12.0"
