--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "validator": "^13.12.0"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
