--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "prepare": "husky install"
+    "prepare": "if [ $NODE_ENV != 'production' ]; then husky install; fi"
   },
   "keywords": [],
   "author": "",
