chore: add travis ci and coveralls

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && coveralls < ./coverage/lcov.info",
     "prepare": "if [ $NODE_ENV != 'production' ]; then husky install; fi"
   },
   "keywords": [],
@@ -30,6 +31,7 @@
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "coveralls": "^3.1.1",
     "eslint": "^9.12.0",
     "eslint-config-love": "^87.0.0",
     "eslint-plugin-import": "^2.31.0",
