--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node",
   "version": "1.3.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node dist/main/server.js",
