refactor: change all paths to use modules and change mongo lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,15 @@
     "rootDirs": [
       "src"
     ],
+    "baseUrl": "src",
+    "paths": {
+      "@/*": [
+        "*"
+      ],
+    }
   },
   "include": [
     "src"
   ],
-  "exclude": [
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ]
+  "exclude": []
 }
