--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/main/server.js",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "up": "npm run build && docker-compose up -d",
     "down": "docker-compose down",
@@ -27,7 +27,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.5",
-    "@types/mongodb": "^4.0.7",
+    "@types/mongodb": "^3.6.20",
     "@types/node": "^16.18.116",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
@@ -54,11 +54,15 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.1",
+    "module-alias": "^2.2.2",
+    "mongodb": "^3.6.9",
     "nodemon": "^2.0.12",
     "validator": "^13.6.0"
   },
   "engines": {
     "node": "16.x"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
