--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/mongodb": "^3.6.20",
     "@types/node": "^16.18.116",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -57,6 +58,7 @@
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.9",
     "nodemon": "^2.0.12",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.6.0"
   },
   "engines": {
